Fix header align on small devices

--- a/src/app/_common/header/header.scss
+++ b/src/app/_common/header/header.scss
@@ -8,7 +8,6 @@
 	z-index: 10;
 
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
 
 
