--- a/src/app/_common/header/nav/nav.scss
+++ b/src/app/_common/header/nav/nav.scss
@@ -1,5 +1,5 @@
 .header .header-block-nav {
-	// float: right;
+	margin-left: auto;
 
 	@include clearfix();
 
